# YoutueDownload

./: .gitignore  AGENTS.md  JOB_GUIDE.md  README.md  SKILL.md  blog.md  install.sh  main.py  pyproject.toml
src/splitter/: splitter.py
src/youtuedownload/: main.py
